Move tests depending on latest Java to tapestry-latest-java-tests.